# felix

./: .gitignore  Cargo.toml  LICENSE  readme.md  rust-toolchain  todo.md
assets/meshes/: skinned-box.blend  skinned-box.glb
assets/shaders/compute_skinning/: Cargo.toml
assets/shaders/compute_skinning/src/: lib.rs
assets/shaders/pbr/: Cargo.toml
assets/shaders/pbr/src/: lib.rs
assets/shaders/shared/: Cargo.toml
assets/shaders/shared/src/: lib.rs
src/: anim.rs  compute_skinning_pass.rs  filewatcher.rs  game.rs  main.rs  math_helpers.rs  mesh.rs  render_mesh_pass.rs  settings.rs  vulkan_base.rs  vulkan_helpers.rs  world_renderer.rs  world_renderer_passes.rs
src/vulkan/: mod.rs  render_pass_common.rs  shaders.rs
