[package]
name = "felix"
version = "0.1.0"
authors = ["AJ Weeks <contact@ajweeks.com>"]
edition = "2018"
exclude = ["assets/**/*"]

[workspace]
members = [
    "crates/rustc_codegen_spirv",
    "crates/spirv-builder",
    "crates/spirv-std",
    "crates/spirv-std/shared",
    "crates/spirv-std/macros",

    "assets/shaders/pbr",
    "assets/shaders/compute_skinning",
]

[dependencies]
winit = "0.25.0"
glam = { version = "0.15.2", features = ["serde"] }
ash = "0.32.1"
ash-window = "0.6.0"
vk-mem = "0.2.2"
miniz_oxide = "0.4.4"
serde = "1.0.126"
serde_json = "1.0.64"
#egui = "0.12.0"
notify = "4.0.17"
lazy_static = "1.4.0"
gltf = "0.16.0"
byteorder = "1.4.3"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
shared = { path = "assets/shaders/shared" }

[patch.crates-io]
ash = { path = "D:/Code/ash/ash" }
ash-window = { path = "D:/Code/ash/ash-window/" }
vk-mem = { path = "D:/Code/vk-mem-rs/" }

#[patch.path]
#ash = { path = "D:/Code/ash/ash" } # "0.32.1"
#ash-window = { path = "D:/Code/ash/ash-window" } # "0.6.0"
