[package]
name = "felix"
version = "0.1.0"
authors = ["AJ Weeks <contact@ajweeks.com>"]
edition = "2018"
exclude = ["assets/**/*"]

[workspace]
members = [
    "assets/shaders/pbr",
    "assets/shaders/compute_skinning",
]

[dependencies]
winit = "0.25.0"
glam = { version = "0.15.2", features = ["serde"] }
ash = "0.32.1"
ash-window = "0.6.0"
vk-mem = "0.2.2"
miniz_oxide = "0.4.4"
serde = "1.0.126"
serde_json = "1.0.64"
notify = "4.0.17"
lazy_static = "1.4.0"
gltf = "0.16.0"
byteorder = "1.4.3"
spirv-builder = "0.9"
shared = { path = "assets/shaders/shared" }

[patch.crates-io]
#ash = { path = "D:/Code/ash/ash" }
#ash-window = { path = "D:/Code/ash/ash-window/" }
vk-mem = { git = "https://github.com/ajweeks/vk-mem-rs", rev = "d90141dd1fd3e9210f684066132fe0412e1e1673" }

#[patch.path]
#ash = { path = "D:/Code/ash/ash" } # "0.32.1"
#ash-window = { path = "D:/Code/ash/ash-window" } # "0.6.0"

[build-dependencies]
spirv-builder = "0.9"

#itertools = "0.10.1"

# To check out:
# egui
# tracing
# macaw
