[package]
name = "felix"
version = "0.1.0"
authors = ["AJ Weeks <contact@ajweeks.com>"]
exclude = ["assets/**/*"]
edition = "2021"

[workspace]
members = [
    "assets/shaders/pbr",
    "assets/shaders/compute_skinning",
]

[dependencies]
winit = "0.28.6"
glam = "0.24.1" #  glam = { version = "0.15.2", features = ["serde"] }
ash = { version = "0.37.3", default-features = false, features = ["linked", "debug"]  }
ash-window = "0.12.0"
#vk-mem = "0.2.2"
vk-mem = { git = "https://github.com/ajweeks/vk-mem-rs", rev = "d90141dd1fd3e9210f684066132fe0412e1e1673" }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", rev = "e66d062cbd73a6c98834fc3e3acef98318097156" }
miniz_oxide = "0.7.1"
serde = "1.0.181"
serde_json = "1.0.104"
notify = "6.0.1"
lazy_static = "1.4.0"
gltf = "1.2.0"
byteorder = "1.4.3"
spirv-builder = "0.9"
shared = { path = "assets/shaders/shared" }
anyhow = "1.0"
rspirv = "0.11.0"
rspirv-reflect = "0.8.0"
vk-sync = "0.1.6"
derive_builder = { version = "0.12.0", default-features = false }
parking_lot = "0.12.1"
bytes = "1.4.0"
arrayvec = "0.7.4"
byte-slice-cast = "1.2.2"
shader-prepper = "0.3.0-pre.3"
log = "0.4.19"
gpu-profiler = { git = "https://github.com/h3r2tic/gpu-profiler.git", rev = "e2e2e6113d515d21474f3f072e8f52d7d4c66b5b", features = ["use-ash"] }
puffin = "0.16.0"

[patch.crates-io]
vk-mem = { git = "https://github.com/ajweeks/vk-mem-rs", rev = "d90141dd1fd3e9210f684066132fe0412e1e1673" }

[build-dependencies]
spirv-builder = "0.9"

# To check out:
# egui
# tracing
# macaw
