[package]
name = "compute_skinning"
version = "0.1.0"
authors = ["AJ Weeks"]
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
shared = { path = "../../shaders/shared" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "c2f98b612abb55e0eb453ebd87c2cff218d7cf67" }
bytemuck = "1.13.1"
#zeroable = "0.2.0"
