[package]
name = "shared"
version = "0.4.0-alpha.10"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "c2f98b612abb55e0eb453ebd87c2cff218d7cf67" }
bytemuck = { version = "1.13.1", features = ["derive"] }
#zeroable = "0.2.0"
